# horizon

./: Cargo.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/horizon-core/: Cargo.toml
crates/horizon-core/src/: agent_pair.rs  agents.rs  config.rs  config_migration.rs  horizon_home.rs  lib.rs  panel.rs  runtime_state.rs  session_store.rs  squad.rs  worktree.rs
crates/horizon-core/src/agent_pair/: tests.rs
crates/horizon-core/src/panel/: spawn.rs
crates/horizon-core/src/runtime_state/: agent_sessions.rs  claude_live_sessions.rs
crates/horizon-core/src/session_store/: tests.rs
crates/horizon-core/src/terminal/: support.rs
crates/horizon-ui/src/: command_registry.rs
crates/horizon-ui/src/app/: actions.rs  detached_viewports.rs  lifecycle.rs  mod.rs  panel_chrome.rs  panels.rs  root_chrome.rs  session.rs  view.rs  workspace.rs
crates/horizon-ui/src/app/actions/: command_palette.rs  interaction.rs  panels.rs  support.rs
crates/horizon-ui/src/app/agent_pair/: mod.rs  render.rs  state.rs
crates/horizon-ui/src/app/detached_viewports/: shortcut_actions.rs
crates/horizon-ui/src/app/settings/: presets.rs
crates/horizon-ui/src/app/sidebar/: toolbar.rs
crates/horizon-ui/src/app/squad/: composer.rs  dashboard.rs  lane.rs  mod.rs  render.rs  review.rs  slot_detail.rs  state.rs
crates/horizon-ui/src/input/: ime_commit.rs  mod.rs
crates/horizon-ui/src/terminal_widget/: input.rs  mod.rs  render.rs
crates/horizon-ui/src/terminal_widget/input/: mouse_tests.rs  selection_drag.rs  selection_tests.rs
docs/architecture/: maintainability.md  pi-rpc-follow-up.md
docs/testing/: 2026-05-25-agent-pair-collaboration-macos-smoke.md  2026-05-25-agent-squad-smoke.md  2026-05-28-macos-pi-agent-panel-smoke.md  2026-05-29-macos-shell-panel-cwd-restore-smoke.md
