[package]
name = "horizon-core"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[features]
trace-profiling = ["profiling/profile-with-tracing"]

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
profiling.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
alacritty_terminal.workspace = true
rusqlite.workspace = true
uuid.workspace = true
comrak = { version = "0.54", default-features = false }
git2.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true
